--- a/pds-intro/pds-intro.qmd
+++ b/pds-intro/pds-intro.qmd
@@ -15,6 +15,8 @@ bibliography: ../pds.bib
 
 ## A monadic interface for probabilistic programs
 
+## Probabilistic programs as DAGs
+
 # Enriching the interface
 
 ## Adding discourse constructs
