--- a/factivity/factivity.qmd
+++ b/factivity/factivity.qmd
@@ -5,6 +5,22 @@ bibliography: ../pds.bib
 
 # Factivity, presupposition projection, and the role of discrete knowledge in gradient inference judgments (Aaron)
 
+## The problem of gradience in veridicality judgments
+
+### White & Rawlins 2019
+
+### Degen & Tonhauser 2022
+
+## Two hypotheses
+
+### The Fundamental Discreteness Hypothesis
+
+### The Fundamental Gradience Hypothesis
+
+## Lexica
+
+### The fundamental discreteness hyp
+
 # Some implementation details
 
 ## Delta rules
