--- a/index.qmd
+++ b/index.qmd
@@ -41,3 +41,8 @@ meanwhile, it seamlessly connects probabilistic models to compositional dynamic 
 PDS additionally provides a theory of dynamic discourse update, integrating aspects of discourse such as the common ground, the question under discussion [@ginzburg_dynamics_1996;@roberts_information_2012;@farkas_reacting_2010], and uncertainty about lexical meaning.
 Crucially, given a semantic theory of some discourse phenomenon couched with PDS, one may obtain a probabilistic model of some linguistic dataset, given a particular *response function* [@grove_factivity_2024;@grove_modeling_2025;@grove_probabilistic_2024].
 We introduce PDS in the context empirical datasets studying factivity, vagueness, and the QUD.
+
+## Navigation
+
+- [← Back to Index](../index.html)
+- [Next: Background →](../background/background.html)
