--- a/qud/qud.qmd
+++ b/qud/qud.qmd
@@ -3,8 +3,30 @@ title: "Probabilistic dynamic semantics"
 bibliography: ../pds.bib
 ---
 
-# Modeling the prompt in inference judgment tasks
+# Modeling the prompt in inference judgment tasks (Julian)
 
-# Some implementation details
+# Some implementation details (Julian)
 
 ## Delta rules
+
+# Outlook
+
+## Other empirical domains
+
+### Conventional implicatures (e.g., parentheticals)
+
+### Evidentials (e.g., Sarah Murray's work)
+
+### Non-canonical questions (e.g., Kyle Rawlins's work)
+
+#### 'what if', resistance and resolution in discourse, epistemic resistance moves
+
+### Socio-semantic inferences (e.g., Andrea Beltrama's work)
+
+## Other kinds of experimental tasks
+
+### Dynamics of imprecision (project with Yifan and Helena)
+
+## Other uses of the framework
+
+### Relating operational semantics of lambda-terms to response behavior (e.g., psychosemantics of 'most')
